aws-alb-ingress-controller/aws-alb-ingress-controller/apisvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service-nodeport
  namespace: craftgate
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: management
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: api-gateway-614d10
  sessionAffinity: None
  type: NodePort
