aws-alb-ingress-controller/aws-alb-ingress-controller/testing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: craftgate
  name: api-gateway-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-path: /management/health
    alb.ingress.kubernetes.io/healthcheck-port: "30738"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: api-gateway-service-nodeport
              servicePort: 80
